Formating notebook and adding documentation

--- a/premier_notebook.ipynb
+++ b/premier_notebook.ipynb
@@ -7,9 +7,16 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"../src\")\n",
+    "sys.path.append(\"src/\")\n",
     "from functions import *\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating a dataframe with all information from Premier League season 2010 to 2023."
    ]
   },
   {
@@ -31,6 +38,13 @@
     "    year -= 1\n",
     "\n",
     "df_premier = pd.concat(dfs, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using create_classification_table() functionality to analyse multiple years."
    ]
   },
   {
@@ -71,7 +85,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>1</th>\n",
        "      <td>Man City</td>\n",
        "      <td>255.0</td>\n",
        "      <td>80.0</td>\n",
@@ -82,7 +96,7 @@
        "      <td>86.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>2</th>\n",
        "      <td>Liverpool</td>\n",
        "      <td>233.0</td>\n",
        "      <td>70.0</td>\n",
@@ -93,7 +107,7 @@
        "      <td>106.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>3</th>\n",
        "      <td>Arsenal</td>\n",
        "      <td>205.0</td>\n",
        "      <td>63.0</td>\n",
@@ -104,7 +118,7 @@
        "      <td>119.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>4</th>\n",
        "      <td>Man United</td>\n",
        "      <td>199.0</td>\n",
        "      <td>57.0</td>\n",
@@ -115,7 +129,7 @@
        "      <td>134.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>5</th>\n",
        "      <td>Chelsea</td>\n",
        "      <td>196.0</td>\n",
        "      <td>56.0</td>\n",
@@ -126,7 +140,7 @@
        "      <td>112.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>6</th>\n",
        "      <td>Tottenham</td>\n",
        "      <td>192.0</td>\n",
        "      <td>57.0</td>\n",
@@ -137,7 +151,7 @@
        "      <td>126.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <th>7</th>\n",
        "      <td>West Ham</td>\n",
        "      <td>155.0</td>\n",
        "      <td>44.0</td>\n",
@@ -148,7 +162,7 @@
        "      <td>150.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>8</th>\n",
        "      <td>Leicester</td>\n",
        "      <td>155.0</td>\n",
        "      <td>44.0</td>\n",
@@ -159,7 +173,7 @@
        "      <td>161.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>9</th>\n",
        "      <td>Newcastle</td>\n",
        "      <td>147.0</td>\n",
        "      <td>38.0</td>\n",
@@ -170,7 +184,7 @@
        "      <td>163.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
+       "      <th>10</th>\n",
        "      <td>Wolves</td>\n",
        "      <td>138.0</td>\n",
        "      <td>38.0</td>\n",
@@ -181,7 +195,7 @@
        "      <td>136.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>11</th>\n",
        "      <td>Everton</td>\n",
        "      <td>137.0</td>\n",
        "      <td>37.0</td>\n",
@@ -192,7 +206,7 @@
        "      <td>160.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>12</th>\n",
        "      <td>Aston Villa</td>\n",
        "      <td>135.0</td>\n",
        "      <td>38.0</td>\n",
@@ -203,7 +217,7 @@
        "      <td>156.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>13</th>\n",
        "      <td>Brighton</td>\n",
        "      <td>134.0</td>\n",
        "      <td>31.0</td>\n",
@@ -214,7 +228,7 @@
        "      <td>140.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>14</th>\n",
        "      <td>Crystal Palace</td>\n",
        "      <td>130.0</td>\n",
        "      <td>33.0</td>\n",
@@ -225,7 +239,7 @@
        "      <td>161.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>15</th>\n",
        "      <td>Southampton</td>\n",
        "      <td>125.0</td>\n",
        "      <td>33.0</td>\n",
@@ -236,7 +250,7 @@
        "      <td>189.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>16</th>\n",
        "      <td>Leeds</td>\n",
        "      <td>113.0</td>\n",
        "      <td>31.0</td>\n",
@@ -247,7 +261,7 @@
        "      <td>162.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>17</th>\n",
        "      <td>Burnley</td>\n",
        "      <td>104.0</td>\n",
        "      <td>25.0</td>\n",
@@ -258,7 +272,7 @@
        "      <td>126.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>18</th>\n",
        "      <td>Brentford</td>\n",
        "      <td>69.0</td>\n",
        "      <td>18.0</td>\n",
@@ -269,7 +283,7 @@
        "      <td>83.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>19</th>\n",
        "      <td>Fulham</td>\n",
        "      <td>53.0</td>\n",
        "      <td>12.0</td>\n",
@@ -280,7 +294,7 @@
        "      <td>80.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>20</th>\n",
        "      <td>Sheffield United</td>\n",
        "      <td>48.0</td>\n",
        "      <td>14.0</td>\n",
@@ -302,7 +316,7 @@
        "      <td>108.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>22</th>\n",
        "      <td>Bournemouth</td>\n",
        "      <td>30.0</td>\n",
        "      <td>8.0</td>\n",
@@ -313,7 +327,7 @@
        "      <td>73.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>23</th>\n",
        "      <td>Norwich</td>\n",
        "      <td>30.0</td>\n",
        "      <td>7.0</td>\n",
@@ -324,7 +338,7 @@
        "      <td>119.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
+       "      <th>24</th>\n",
        "      <td>West Brom</td>\n",
        "      <td>26.0</td>\n",
        "      <td>5.0</td>\n",
@@ -335,7 +349,7 @@
        "      <td>76.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>25</th>\n",
        "      <td>Nott'm Forest</td>\n",
        "      <td>13.0</td>\n",
        "      <td>3.0</td>\n",
@@ -351,58 +365,58 @@
       ],
       "text/plain": [
        "                Team  Total Points  Wins  Draws  Loses  Goals Diff  Goals For  \\\n",
-       "13          Man City         255.0  80.0     15   15.0       188.0      274.0   \n",
-       "12         Liverpool         233.0  70.0     23   18.0       127.0      233.0   \n",
-       "0            Arsenal         205.0  63.0     16   31.0        67.0      186.0   \n",
-       "14        Man United         199.0  57.0     28   25.0        54.0      188.0   \n",
-       "6            Chelsea         196.0  56.0     28   25.0        75.0      187.0   \n",
-       "20         Tottenham         192.0  57.0     21   32.0        69.0      195.0   \n",
-       "23          West Ham         155.0  44.0     23   45.0        13.0      163.0   \n",
-       "11         Leicester         155.0  44.0     23   44.0        19.0      180.0   \n",
-       "15         Newcastle         147.0  38.0     33   40.0       -23.0      140.0   \n",
-       "24            Wolves         138.0  38.0     24   49.0       -30.0      106.0   \n",
-       "8            Everton         137.0  37.0     26   48.0       -36.0      124.0   \n",
-       "1        Aston Villa         135.0  38.0     21   51.0       -16.0      140.0   \n",
-       "4           Brighton         134.0  31.0     41   38.0       -15.0      125.0   \n",
-       "7     Crystal Palace         130.0  33.0     31   46.0       -40.0      121.0   \n",
-       "19       Southampton         125.0  33.0     26   52.0       -57.0      132.0   \n",
-       "10             Leeds         113.0  31.0     20   41.0       -35.0      127.0   \n",
-       "5            Burnley         104.0  25.0     29   40.0       -39.0       87.0   \n",
-       "3          Brentford          69.0  18.0     15   22.0        -8.0       75.0   \n",
-       "9             Fulham          53.0  12.0     17   26.0       -24.0       56.0   \n",
-       "18  Sheffield United          48.0  14.0      6   36.0       -47.0       36.0   \n",
+       "1           Man City         255.0  80.0     15   15.0       188.0      274.0   \n",
+       "2          Liverpool         233.0  70.0     23   18.0       127.0      233.0   \n",
+       "3            Arsenal         205.0  63.0     16   31.0        67.0      186.0   \n",
+       "4         Man United         199.0  57.0     28   25.0        54.0      188.0   \n",
+       "5            Chelsea         196.0  56.0     28   25.0        75.0      187.0   \n",
+       "6          Tottenham         192.0  57.0     21   32.0        69.0      195.0   \n",
+       "7           West Ham         155.0  44.0     23   45.0        13.0      163.0   \n",
+       "8          Leicester         155.0  44.0     23   44.0        19.0      180.0   \n",
+       "9          Newcastle         147.0  38.0     33   40.0       -23.0      140.0   \n",
+       "10            Wolves         138.0  38.0     24   49.0       -30.0      106.0   \n",
+       "11           Everton         137.0  37.0     26   48.0       -36.0      124.0   \n",
+       "12       Aston Villa         135.0  38.0     21   51.0       -16.0      140.0   \n",
+       "13          Brighton         134.0  31.0     41   38.0       -15.0      125.0   \n",
+       "14    Crystal Palace         130.0  33.0     31   46.0       -40.0      121.0   \n",
+       "15       Southampton         125.0  33.0     26   52.0       -57.0      132.0   \n",
+       "16             Leeds         113.0  31.0     20   41.0       -35.0      127.0   \n",
+       "17           Burnley         104.0  25.0     29   40.0       -39.0       87.0   \n",
+       "18         Brentford          69.0  18.0     15   22.0        -8.0       75.0   \n",
+       "19            Fulham          53.0  12.0     17   26.0       -24.0       56.0   \n",
+       "20  Sheffield United          48.0  14.0      6   36.0       -47.0       36.0   \n",
        "21           Watford          41.0  11.0      8   37.0       -53.0       55.0   \n",
-       "2        Bournemouth          30.0   8.0      6   21.0       -35.0       38.0   \n",
-       "16           Norwich          30.0   7.0      9   40.0       -91.0       28.0   \n",
-       "22         West Brom          26.0   5.0     11   22.0       -41.0       35.0   \n",
-       "17     Nott'm Forest          13.0   3.0      4    9.0       -22.0       11.0   \n",
+       "22       Bournemouth          30.0   8.0      6   21.0       -35.0       38.0   \n",
+       "23           Norwich          30.0   7.0      9   40.0       -91.0       28.0   \n",
+       "24         West Brom          26.0   5.0     11   22.0       -41.0       35.0   \n",
+       "25     Nott'm Forest          13.0   3.0      4    9.0       -22.0       11.0   \n",
        "\n",
        "    Goals Against  \n",
-       "13           86.0  \n",
-       "12          106.0  \n",
-       "0           119.0  \n",
-       "14          134.0  \n",
-       "6           112.0  \n",
-       "20          126.0  \n",
-       "23          150.0  \n",
-       "11          161.0  \n",
-       "15          163.0  \n",
-       "24          136.0  \n",
-       "8           160.0  \n",
-       "1           156.0  \n",
-       "4           140.0  \n",
-       "7           161.0  \n",
-       "19          189.0  \n",
-       "10          162.0  \n",
-       "5           126.0  \n",
-       "3            83.0  \n",
-       "9            80.0  \n",
+       "1            86.0  \n",
+       "2           106.0  \n",
+       "3           119.0  \n",
+       "4           134.0  \n",
+       "5           112.0  \n",
+       "6           126.0  \n",
+       "7           150.0  \n",
+       "8           161.0  \n",
+       "9           163.0  \n",
+       "10          136.0  \n",
+       "11          160.0  \n",
+       "12          156.0  \n",
+       "13          140.0  \n",
+       "14          161.0  \n",
+       "15          189.0  \n",
+       "16          162.0  \n",
+       "17          126.0  \n",
        "18           83.0  \n",
+       "19           80.0  \n",
+       "20           83.0  \n",
        "21          108.0  \n",
-       "2            73.0  \n",
-       "16          119.0  \n",
-       "22           76.0  \n",
-       "17           33.0  "
+       "22           73.0  \n",
+       "23          119.0  \n",
+       "24           76.0  \n",
+       "25           33.0  "
       ]
      },
      "execution_count": 3,
@@ -413,6 +427,8 @@
    "source": [
     "years = [2020, 2021, 2022] \n",
     "class_table = create_classification_table(df_premier, years)\n",
+    "class_table.reset_index(drop=True, inplace=True) # using index as positions in the classification table\n",
+    "class_table.index += 1 # to make the index start at 1 not at 0\n",
     "class_table"
    ]
   }
